@@ -1,4 +1,7 @@
-﻿[B]1.4.2 (2012.01.15)[/B]
+﻿[B]1.4.3 (2012.01.25)[/B]
+fixed: can't split some lyrics at right point
+
+[B]1.4.2 (2012.01.15)[/B]
 fixed: variable 'song' may be referenced before assignment
 
 [B]1.4.1 (2012.01.14)[/B]
